--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,7 +17,7 @@ text-align: center;
 }
 .main{
   height: 1000px;
-  background-image: url(https://kumashunshun.github.io/image/658ECDFA-F3D1-4736-B22E-0E0CFF202C84.jpg);
+  background-image: url(image/658ECDFA-F3D1-4736-B22E-0E0CFF202C84.jpg);
   background-size:cover;
   color: white;
 
